@@ -1,7 +1,7 @@
 Package: RWinEdt
 Title: R-WinEdt
-Version: 1.8-0
-Date: 2008-04-26
+Version: 1.8-1
+Date: 2009-03-03
 Author: Uwe Ligges <Uwe.Ligges@R-project.org>
 Description: A plug in for using WinEdt as an editor for R
 Maintainer: Uwe Ligges <Uwe.Ligges@R-project.org>
@@ -11,4 +11,3 @@ OS_type: windows
 LazyLoad: true
 URL: http://www.winedt.com
 License: GPL-2
-
